Cherry-pick r249224. rdar://problem/54819205

Null check webFrame when creating a print preview to prevent a crash.
    https://bugs.webkit.org/show_bug.cgi?id=201237
    <rdar://problem/51618863>

    Reviewed by Tim Horton.

    Source/WebKit:

    Move and expend a null check to keep from crashing when making a print preview.

    * UIProcess/mac/WKPrintingView.mm:
    (-[WKPrintingView _drawPreview:]):
    (-[WKPrintingView drawRect:]):

    Tools:

    Test to verify that if we don't have the WebPageProxy, we will not crash when making a print preview.

    * TestWebKitAPI/Tests/WebKitCocoa/UIDelegate.mm:
    (TEST):

    Canonical link: https://commits.webkit.org/214926@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@249224 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/213666.310@safari-608-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-608-branch@249240 268f45cc-cd09-0410-ab3c-d52691b4dbfc